--- a/backend/package.json
+++ b/backend/package.json
@@ -32,8 +32,10 @@
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "winston": "^3.18.3"
   }
