--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,9 @@
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
