--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "socket.io": "^4.8.1",
     "winston": "^3.18.3"
   }
 }
