--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.15",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
@@ -39,6 +40,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3"
   }
