--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@types/express": "^5.0.3",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^24.0.15",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
@@ -34,11 +35,15 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3"
   }
